--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,12 @@ body{
     max-width: 1100px;
     width: 100%;
     margin: 0 auto;
+
+    &__main {
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+    }
 }
 
 .header {
@@ -91,6 +97,8 @@ body{
 .main {
     margin-top: 30px;
     .left-side { 
+        width: 50%;
+
         .teacher-icon{
             width: 180px;
             height: 180px;
@@ -138,7 +146,7 @@ body{
 
         .about-myself {
             margin-top: 25px;
-            width: 80%;
+            // width: 80%;
 
             &__header {
                 color: #A8A8A8;
@@ -151,10 +159,11 @@ body{
                 font-weight: 400px;
                 font-size: 15px;
                 margin-top: 12px;
+                line-height: 20px;
             }
         }
 
-        .achievements {
+        .achievements, .education {
             margin-top: 25px;
 
             &__header {
@@ -164,23 +173,183 @@ body{
             }
 
             &__list {
-                display: flex;
-                flex-direction: column; 
-                margin-top: 12px;         
+                margin-top: 12px;      
             }
             
             &__item{
                 display: flex;
+                align-items: start;
                 gap: 5px;
-                align-items: center;
+                color: #000;
+                font-weight: 400;
+                font-size: 15px;
+                line-height: 20px;
 
-                &__text {
-                    color: #000;
-                    font-weight: 400;
-                    font-size: 15px;
+                &::before{
+                    content: url('images/icons/check.svg');
+                }
+
+                & span {
+                    color: #A7AEB8;
                 }
             }
 
         }
+    }
+    
+    .right-side{
+        width: 50%;
+
+        .video {
+            background-color: #D9D9D9;
+            width: 100%;
+            height: 45%;
+            border-radius: 32px;
+        }
+
+        .feedback {
+            margin-top: 25px;
+            
+            &__header {
+                color:#A8A8A8;
+                font-size: 15px;
+                font-weight: 500;
+            }
+
+            &__summary {
+                margin-top: 15px;
+                display: flex;
+                justify-content: space-between;
+                
+                &-number{
+                    font-size: 50px;
+                    font-weight: 700;
+                    color: #000;
+                }
+            }
+
+            &__stars {
+                display: flex;
+                gap: 5px;
+                margin-top: 10px;
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+            }
+
+            &__count{
+                color: #A7AEB8;
+                font-size: 13px;
+                font-weight: 500;
+                display: block;
+                margin-top: 15px;
+            }
+
+            &__ratings{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                .ratings__item {
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                }
+
+                label{
+                    width: 10px;
+                    color: #A7AEB8;
+                    font-size: 13px;
+                    font-weight: 500;
+                }
+
+                progress{
+                    border: none; 
+                    height: 6px; 
+
+                    &::-webkit-progress-bar {
+                        background-color: #A7AEB833;
+                        border-radius: 30px;
+                    }
+
+                    &::-webkit-progress-value {
+                        background-color: #F99253;
+                        border-radius: 30px;
+                    }
+                }
+            }
+
+            &__clients {
+                display: flex;
+                flex-direction: column;
+                margin-top: 15px;
+                border-top: 1px solid #A7AEB833;
+
+                .feedback__client {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 15px;
+
+                    .client {
+                        &__info {
+                            display: flex;
+                            gap: 10px;
+                            align-items: center;
+
+                            img {
+                                width: 55px;
+                                height: 55px;
+                                object-fit: cover;
+                                border-radius: 12px;
+                            }
+                        }
+
+                        &__text {
+                            display: flex;
+                            flex-direction: column;
+                        }
+
+                        &__name {
+                            color: #000;
+                            font-weight: 600;
+                            font-size: 14px;
+                            margin-bottom: 10px;
+                        }
+
+                        &__role{
+                            color:#A7AEB8;
+                            font-size: 10px;
+                            padding: 4px 8px;
+                            font-weight: 400;
+                            background-color: #A7AEB833;
+                            width: min-content;
+                            border-radius: 4px;
+                        }
+
+                        &__star {
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+                }
+            }
+
+            &__description {
+                display: flex;
+                flex-direction: column;
+                width: 60%;
+                align-items: left;
+            }
+
+            &__text {
+                font-size: 12px;
+                font-weight: 400;
+                color: #000;
+                margin-top: 5px;
+            }
+        }
+
+
     }
 }
