--- a/style.css
+++ b/style.css
@@ -57,10 +57,23 @@ body {
   width: 100%;
   margin: 0 auto;
 }
+.container__header, .container__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .container__main {
   display: flex;
   justify-content: space-between;
   gap: 50px;
+  margin-bottom: 50px;
+}
+.container__contacts, .container__networks {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  border-top: 1px solid rgba(167, 174, 184, 0.2);
+  padding: 50px 0px;
 }
 
 .header {
@@ -69,25 +82,20 @@ body {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
-.header__flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header__flex .logo {
+.header .logo {
   display: block;
   text-decoration: none;
 }
-.header__flex .logo img {
+.header .logo img {
   width: 118px;
 }
-.header__flex .link {
+.header .link {
   text-decoration: none;
   color: #000;
   font-size: 18px;
   font-weight: 600;
 }
-.header__flex .link:hover {
+.header .link:hover {
   text-decoration: underline;
 }
 
@@ -311,4 +319,62 @@ body {
   font-weight: 400;
   color: #000;
   margin-top: 5px;
+}
+.main .contact__header, .main .network__header {
+  width: 50%;
+  font-size: 28px;
+  font-weight: 600;
+  color: #000;
+}
+.main .contact__info, .main .network__info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.main .contact__text, .main .network__text {
+  color: #A8A8A8;
+  font-size: 15px;
+  font-weight: 400;
+  width: 80%;
+  margin-bottom: 15px;
+}
+.main .contact__links, .main .network__links {
+  display: flex;
+  gap: 25px;
+}
+.main .contact__mail, .main .contact__link, .main .network__mail, .main .network__link {
+  text-decoration: none;
+  color: #000;
+  font-size: 15px;
+  font-weight: 500;
+  transition: color 0.3s linear;
+}
+.main .contact__mail:hover, .main .contact__link:hover, .main .network__mail:hover, .main .network__link:hover {
+  color: #FF9130;
+}
+
+.footer {
+  padding: 50px 0px 30px 0px;
+  border-top: 1px solid rgba(167, 174, 184, 0.2);
+}
+.footer .logo {
+  display: block;
+  text-decoration: none;
+}
+.footer .logo img {
+  width: 118px;
+}
+.footer .links {
+  display: flex;
+  gap: 40px;
+}
+.footer .links .link {
+  font-size: 15px;
+  font-weight: 400px;
+  color: #A8A8A8;
+  text-decoration: none;
+  transition: color 0.3s linear;
+}
+.footer .links .link:hover {
+  color: #000;
 }/*# sourceMappingURL=style.css.map */
