--- a/style.scss
+++ b/style.scss
@@ -52,10 +52,25 @@ body{
     width: 100%;
     margin: 0 auto;
 
+    &__header, &__footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
     &__main {
         display: flex;
         justify-content: space-between;
         gap: 50px;
+        margin-bottom: 50px;
+    }
+
+    &__contacts, &__networks {
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+        border-top: 1px solid #A7AEB833;
+        padding: 50px 0px;
     }
 }
 
@@ -63,10 +78,6 @@ body{
     padding: 32px 0;
     background: rgba(255, 255, 255, 0.60);
     backdrop-filter: blur(10px);
-    &__flex{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
 
         .logo{
             display: block;
@@ -86,7 +97,6 @@ body{
         .link:hover{
             text-decoration: underline;
         }
-    }
 }
 
 .background{
@@ -349,7 +359,74 @@ body{
                 margin-top: 5px;
             }
         }
+    }
+    .contact, .network {
+        &__header {
+            width: 50%;
+            font-size: 28px;
+            font-weight: 600;
+            color: #000;
+        }
 
+        &__info {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+        }
 
+        &__text {
+            color: #A8A8A8;
+            font-size: 15px;
+            font-weight: 400;
+            width: 80%;
+            margin-bottom: 15px;
+        }
+
+        &__links {
+            display: flex;
+            gap: 25px;
+        }
+
+        &__mail, &__link {
+            text-decoration: none;
+            color: #000;
+            font-size: 15px;
+            font-weight: 500;
+            transition: color 0.3s linear;
+        }
+
+        &__mail:hover, &__link:hover {
+            color: #FF9130;
+        }
+    }
+}
+
+.footer {
+    padding: 50px 0px 30px 0px;;
+    border-top: 1px solid #A7AEB833;
+    
+    .logo{
+        display: block;
+        text-decoration: none;
+        img{
+            width: 118px;
+        }
+    }
+
+    .links {
+        display: flex;
+        gap: 40px;
+
+        .link {
+            font-size: 15px;
+            font-weight: 400px;
+            color:#A8A8A8;
+            text-decoration: none;
+            transition: color 0.3s linear;
+        }
+
+        .link:hover {
+            color: #000;
+        }
     }
 }
