--- a/style.scss
+++ b/style.scss
@@ -147,7 +147,7 @@ body{
     @media (max-width: 768px){
         margin-top: 25px;
     }
-    
+
     .left-side { 
         width: 50%;
 
@@ -374,7 +374,7 @@ body{
                     }
 
                     &::-webkit-progress-value {
-                        background-color: #F99253;
+                        background-color: #F9925399;
                         border-radius: 30px;
                     }
                 }
