--- a/style.css
+++ b/style.css
@@ -337,34 +337,50 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 45%;
+}
+@media (max-width: 375px) {
+  .main .right-side .feedback__ratings {
+    width: 100%;
+  }
 }
 .main .right-side .feedback__ratings .ratings__item {
   display: flex;
   align-items: center;
   gap: 5px;
 }
-.main .right-side .feedback__ratings label {
+.main .right-side .feedback__ratings .bar {
   width: 10px;
   color: #A7AEB8;
   font-size: 13px;
   font-weight: 500;
 }
-.main .right-side .feedback__ratings progress {
-  border: none;
-  height: 6px;
-}
-@media (max-width: 375px) {
-  .main .right-side .feedback__ratings progress {
-    width: 100%;
-  }
-}
-.main .right-side .feedback__ratings progress::-webkit-progress-bar {
+.main .right-side .feedback__ratings .progress {
+  width: 100%;
+  height: 7px;
   background-color: rgba(167, 174, 184, 0.2);
   border-radius: 30px;
 }
-.main .right-side .feedback__ratings progress::-webkit-progress-value {
-  background-color: rgba(249, 146, 83, 0.6);
+.main .right-side .feedback__ratings .progress__color {
+  position: relative;
+  height: 7px;
+  background-color: #F99253;
   border-radius: 30px;
+}
+.main .right-side .feedback__ratings .progress__color__5 {
+  width: 75%;
+}
+.main .right-side .feedback__ratings .progress__color__4 {
+  width: 85%;
+}
+.main .right-side .feedback__ratings .progress__color__3 {
+  width: 65%;
+}
+.main .right-side .feedback__ratings .progress__color__2 {
+  width: 15%;
+}
+.main .right-side .feedback__ratings .progress__color__1 {
+  width: 10%;
 }
 .main .right-side .feedback__clients {
   display: flex;
