--- a/style.scss
+++ b/style.scss
@@ -346,6 +346,11 @@ body{
                 display: flex;
                 flex-direction: column;
                 gap: 10px;
+                width: 45%;
+
+                @media (max-width: 375px) {
+                    width: 100%;
+                }
 
                 .ratings__item {
                     display: flex;
@@ -353,29 +358,44 @@ body{
                     gap: 5px;
                 }
 
-                label{
+                .bar{
                     width: 10px;
                     color: #A7AEB8;
                     font-size: 13px;
                     font-weight: 500;
                 }
 
-                progress{
-                    border: none; 
-                    height: 6px; 
+                .progress {
+                    width: 100%;
+                    height: 7px;
+                    background-color: #A7AEB833;
+                    border-radius: 30px;
 
-                    @media (max-width: 375px) {
-                        width: 100%;
-                    }
-
-                    &::-webkit-progress-bar {
-                        background-color: #A7AEB833;
+                    &__color {
+                        position: relative;
+                        height: 7px;
+                        background-color: #F99253;
                         border-radius: 30px;
-                    }
 
-                    &::-webkit-progress-value {
-                        background-color: #F9925399;
-                        border-radius: 30px;
+                        &__5 {
+                            width: 75%;
+                        }
+
+                        &__4 {
+                            width: 85%;
+                        }
+
+                        &__3 {
+                            width: 65%;
+                        }
+
+                        &__2 {
+                            width: 15%;
+                        }
+
+                        &__1 {
+                            width: 10%;
+                        }
                     }
                 }
             }
